ajout middleware likedStatus+commentaire

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "url": "git+https://github.com/JulienBrazzalotto/JulienBrazzalotto_6_01112021.git"
   },
   "author": "Brazzalotto",
-  "license": "Apache",
+  "license": "Apache 2.0",
   "bugs": {
     "url": "https://github.com/JulienBrazzalotto/JulienBrazzalotto_6_01112021/issues"
   },
